add image using string Interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-header></app-header>
-<app-header-container></app-header-container>
-<app-nav></app-nav>
+<app-header-container>
+
+</app-header-container>
 <app-home></app-home>
-<app-aside></app-aside>
+<aside>
+  <app-aside></app-aside>
+</aside>
 <app-footer></app-footer>
