added ngFor for countries and people name

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
 <p>home works!</p>
+<ul>
+  <li *ngFor="let cotry of peopleByCountry"> {{cotry.country}}
+    <ul>
+      <li *ngFor="let p of cotry.people"> {{p.name}}
+
+      </li>
+    </ul>
+  </li>
+</ul>
