edited ui using bootstrap components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,5 @@
-<p>header works!</p>
-<img src="{{imgSrc}}" alt="" srcset="">
+<div class="border border-success p-2 mb-2">
+
+  <p>header works!</p>
+  <img src="{{imgSrc}}" alt="" srcset="">
+</div>
