--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,16 @@
 <app-header-container>
 
 </app-header-container>
-<app-home></app-home>
-<aside>
-  <app-aside></app-aside>
-</aside>
-<app-footer></app-footer>
+
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <app-home></app-home>
+    </div>
+    <div class="col-3">
+      <app-aside></app-aside>
+    </div>
+
+  </div>
+</div>
+  <app-footer></app-footer>
