--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-todo-list></app-todo-list>
-<app-header-container>
+<!-- <app-header-container>
 
 </app-header-container>
 
@@ -14,4 +14,4 @@
 
   </div>
 </div>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
