--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,1 +1,9 @@
-<p>product-list works!</p>
+<h1 class="text-center">product list</h1>
+
+<div class="container">
+  <div class="row">
+    <app-product-card *ngFor="let prod of prodList" [singleProd]="prod" (prodSelected)="selectProd($event)" class="col-md-4"
+      [showDetails]="true">
+    </app-product-card>
+  </div>
+</div>
