--- a/src/app/all-photos/all-photos.component.html
+++ b/src/app/all-photos/all-photos.component.html
@@ -1,1 +1,13 @@
-<p>all-photos works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <h3>All Photos</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-3" *ngFor="let photo of images">
+        <img [src]="photo.url" class="img-thumbnail" />
+      </div>
+    </div>
+  </div>
