--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+{{user|json}}
+<!-- <form #myloginform="ngForm" (ngSubmit)="login(myloginform.value)"> -->
+# create a login form username and password
+<form #myloginform="ngForm" (ngSubmit)="login(myloginform.value)">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" name="username" #username="ngModel" [(ngModel)]="user.username" required>
+    <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
+      Username is required
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="password" #password="ngModel" [(ngModel)]="user.password" required>
+    <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+      Password is required
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary" [disabled]="myloginform.invalid">Login</button>
+</form>
